--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
-    "@angular/common": "^20.2.1",
-    "@angular/compiler": "^20.2.1",
-    "@angular/core": "^20.2.1",
-    "@angular/forms": "^20.2.1",
-    "@angular/platform-browser": "^20.2.1",
-    "@angular/platform-server": "^20.2.1",
-    "@angular/router": "^20.2.1",
-    "@angular/ssr": "^20.2.0",
-    "@hono/node-server": "^1.19.0",
-    "hono": "^4.9.4",
+    "@angular/common": "^20.3.2",
+    "@angular/compiler": "^20.3.2",
+    "@angular/core": "^20.3.2",
+    "@angular/forms": "^20.3.2",
+    "@angular/platform-browser": "^20.3.2",
+    "@angular/platform-server": "^20.3.2",
+    "@angular/router": "^20.3.2",
+    "@angular/ssr": "^20.3.3",
+    "@hono/node-server": "^1.19.5",
+    "hono": "^4.9.9",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.2.0",
-    "@angular/cli": "^20.2.0",
-    "@angular/compiler-cli": "^20.2.1",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@commitlint/types": "^19.8.1",
-    "@eslint/js": "^9.34.0",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@angular/build": "^20.3.3",
+    "@angular/cli": "^20.3.3",
+    "@angular/compiler-cli": "^20.3.2",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@commitlint/types": "^20.0.0",
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/jasmine": "~5.1.9",
-    "@types/node": "^20.19.11",
-    "angular-eslint": "^20.2.0",
-    "eslint": "^9.34.0",
+    "@types/node": "^20.19.19",
+    "angular-eslint": "^20.3.0",
+    "eslint": "^9.36.0",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-jsdoc": "^54.1.1",
+    "eslint-plugin-jsdoc": "^60.6.0",
+    "eslint-plugin-perfectionist": "4.15.0",
     "eslint-plugin-unused-imports": "^4.2.0",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "jasmine-core": "~5.9.0",
+    "jasmine-core": "~5.11.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -54,8 +54,8 @@
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.12",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.41.0"
+    "tailwindcss": "^4.1.13",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.45.0"
   }
 }
