--- a/package.json
+++ b/package.json
@@ -12,50 +12,48 @@
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
-    "@angular/common": "^20.3.2",
-    "@angular/compiler": "^20.3.2",
-    "@angular/core": "^20.3.2",
-    "@angular/forms": "^20.3.2",
-    "@angular/platform-browser": "^20.3.2",
-    "@angular/platform-server": "^20.3.2",
-    "@angular/router": "^20.3.2",
-    "@angular/ssr": "^20.3.3",
-    "@hono/node-server": "^1.19.5",
-    "hono": "^4.9.9",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-server": "^21.0.6",
+    "@angular/router": "^21.0.6",
+    "@angular/ssr": "^21.0.4",
+    "@hono/node-server": "^1.19.7",
+    "hono": "^4.11.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.3",
-    "@angular/cli": "^20.3.3",
-    "@angular/compiler-cli": "^20.3.2",
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@commitlint/types": "^20.0.0",
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/jasmine": "~5.1.9",
-    "@types/node": "^20.19.19",
-    "angular-eslint": "^20.3.0",
-    "eslint": "^9.36.0",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.6",
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
+    "@commitlint/types": "^20.2.0",
+    "@eslint/js": "^9.39.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^24.10.4",
+    "angular-eslint": "^21.1.0",
+    "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-jsdoc": "^60.6.0",
-    "eslint-plugin-perfectionist": "4.15.0",
-    "eslint-plugin-unused-imports": "^4.2.0",
-    "globals": "^16.4.0",
+    "eslint-plugin-jsdoc": "^61.5.0",
+    "eslint-plugin-perfectionist": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "jasmine-core": "~5.11.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "prettier-plugin-packagejson": "^2.5.19",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.13",
+    "prettier": "^3.7.4",
+    "prettier-plugin-packagejson": "^2.5.20",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0"
+    "typescript-eslint": "^8.51.0",
+    "vitest": "^4.0.16"
+  },
+  "engines": {
+    "node": ">=24.0.0"
   }
 }
